# DDI

./: .codedocs  .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  travis.sh
cmake/modules/: ctest_testing.cmake  functions.cmake
cmake/run/: ubuntu16-04.py  ubuntu16-04_gcc_debug.sh  ubuntu16-04_gcc_debug_coverage.sh  ubuntu16-04_gcc_release.sh
cmake/toolchains/: gcc.cmake
doc/: CMakeLists.txt  README.md  code.bib  doxygen.cfg  doxygen.cfg.in  mainpage.dox
input/data/: atvi_10y.csv  spy_10y.csv
input/data/scotia_itrade/: CGR.TO.csv  CIE.TO.csv  CJP.TO.csv  CLU.TO.csv  CRQ.TO.csv  CWO.TO.csv  HXS.TO.csv  HXT.TO.csv  VRE.TO.csv  XCH.TO.csv  XEC.TO.csv  XEU.TO.csv  XID.TO.csv  XIT.TO.csv  XMD.TO.csv
input/keys/: README.md  api_keys_example.txt
input/test/: symbols_itrade.csv
src/: CMakeLists.txt  ETF_options_data_2018-06-05.csv  ETF_options_data_2018-06-07.csv  ETF_options_data_2018-06-09.csv  Makefile  SPY_All_Holdings.xls  async_barchart_option_scraper.py  async_option_scraper.py  cmake.hpp.in  core.cpp  core.hpp  core.ipp  get_data.py  macros.hpp  save_symbols.py  simple.py  to_be_modified.py
src/Stock_Price_Data/: Minute_Symbol_Data.h5
src/selenium/: getting_started.py  gs2.py
src/testing/: CMakeLists.txt  main.cpp  test_integration_generate_ideal.cpp
src/todelete_2018_07/: barchart_etf-asset-classes-07-18-2018.csv  main.py  option_parser.py  simple.py  test.py
src/todelete_2018_07/barchart/: scraper.py
src/todelete_2018_07/selenium/: gs2.py
test/input/: symbols_itrade.csv
